// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToggleProjectsViewButton component > matches the snapshot for desktop mode 1`] = `
<DocumentFragment>
  <button
    aria-label="See desktop projects"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1wjzr1s-MuiButtonBase-root-MuiIconButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeLarge css-rlj5h7-MuiSvgIcon-root"
      data-testid="MobileScreenShareIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M17 1.01 7 1c-1.1 0-1.99.9-1.99 2v18c0 1.1.89 2 1.99 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99M17 19H7V5h10zm-4.2-5.78v1.75l3.2-2.99L12.8 9v1.7c-3.11.43-4.35 2.56-4.8 4.7 1.11-1.5 2.58-2.18 4.8-2.18"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`ToggleProjectsViewButton component > matches the snapshot for mobile mode 1`] = `
<DocumentFragment>
  <button
    aria-label="See mobile projects"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1wjzr1s-MuiButtonBase-root-MuiIconButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeLarge css-rlj5h7-MuiSvgIcon-root"
      data-testid="DesktopWindowsIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M20 3H4c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h6v2H8v2h8v-2h-2v-2h6c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2"
      />
    </svg>
  </button>
</DocumentFragment>
`;
